POM fixed